// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change the selection when a selectable node is clicked 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-25"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-26 MuiTypography-subtitle2"
      >
        Tree
      </h6>
      <div
        class="makeStyles-decorators-27"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-28"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-28"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-28"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          />
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-28"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            />
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should collapse/expand a non-selectable node when clicked 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-31"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-32 MuiTypography-subtitle2"
      >
        Tree
      </h6>
      <div
        class="makeStyles-decorators-33"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-34"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-34"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-34"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.1
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should correctly interpret the order of nodes with the same parent in the flat nodes list 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-13"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-14 MuiTypography-subtitle2"
      >
        Deep Tree
      </h6>
      <div
        class="makeStyles-decorators-15"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-16"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-16"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-2.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-16"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-16"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-16"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.2
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-16"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.1
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-16"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.3
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-expanded="true"
                        class="MuiTreeItem-root Mui-expanded"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-16"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.3.1
                              </p>
                            </div>
                          </div>
                        </div>
                        <ul
                          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                          role="group"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner"
                            >
                              <li
                                class="MuiTreeItem-root"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                                  >
                                    <div
                                      class="makeStyles-label-16"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-body1"
                                      >
                                        Node-1.3.1.1
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                              <li
                                class="MuiTreeItem-root"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                                  >
                                    <div
                                      class="makeStyles-label-16"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-body1"
                                      >
                                        Node-1.3.1.2
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                            </div>
                          </div>
                        </ul>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-16"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should only expand the specified nodes on initial render 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-19"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-20 MuiTypography-subtitle2"
      >
        Deep Tree
      </h6>
      <div
        class="makeStyles-decorators-21"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-22"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="false"
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-22"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-22"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-expanded="false"
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-22"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.3
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-22"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-22"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-2.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render a multi-level tree correctly 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-7"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-8 MuiTypography-subtitle2"
      >
        Deep Tree
      </h6>
      <div
        class="makeStyles-decorators-9"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-10"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-1
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-10"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.1
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.1
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                      <li
                        class="MuiTreeItem-root"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          />
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.1.2
                              </p>
                            </div>
                          </div>
                        </div>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-10"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.2
                      </p>
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-expanded="true"
                class="MuiTreeItem-root Mui-expanded"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-10"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-1.3
                      </p>
                    </div>
                  </div>
                </div>
                <ul
                  class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                  role="group"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <li
                        aria-expanded="true"
                        class="MuiTreeItem-root Mui-expanded"
                        role="treeitem"
                        tabindex="-1"
                      >
                        <div
                          class="MuiTreeItem-content"
                        >
                          <div
                            class="MuiTreeItem-iconContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                          >
                            <div
                              class="makeStyles-label-10"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1"
                              >
                                Node-1.3.1
                              </p>
                            </div>
                          </div>
                        </div>
                        <ul
                          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
                          role="group"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner"
                            >
                              <li
                                class="MuiTreeItem-root"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                                  >
                                    <div
                                      class="makeStyles-label-10"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-body1"
                                      >
                                        Node-1.3.1.1
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                              <li
                                class="MuiTreeItem-root"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="MuiTreeItem-content"
                                >
                                  <div
                                    class="MuiTreeItem-iconContainer"
                                  />
                                  <div
                                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                                  >
                                    <div
                                      class="makeStyles-label-10"
                                    >
                                      <p
                                        class="MuiTypography-root MuiTypography-body1"
                                      >
                                        Node-1.3.1.2
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </li>
                            </div>
                          </div>
                        </ul>
                      </li>
                    </div>
                  </div>
                </ul>
              </li>
            </div>
          </div>
        </ul>
      </li>
      <li
        aria-expanded="true"
        class="MuiTreeItem-root Mui-expanded"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-10"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-2
              </p>
            </div>
          </div>
        </div>
        <ul
          class="MuiCollapse-root MuiTreeItem-group MuiCollapse-entered"
          role="group"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner"
            >
              <li
                class="MuiTreeItem-root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="MuiTreeItem-content"
                >
                  <div
                    class="MuiTreeItem-iconContainer"
                  />
                  <div
                    class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
                  >
                    <div
                      class="makeStyles-label-10"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Node-2.1
                      </p>
                    </div>
                  </div>
                </div>
              </li>
            </div>
          </div>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render the tree 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-1"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-2 MuiTypography-subtitle2"
      >
        Default Tree
      </h6>
      <div
        class="makeStyles-decorators-3"
      />
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        class="MuiTreeItem-root"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          />
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-4"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-root1
              </p>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render the tree with a help hint 1`] = `
<div>
  <div>
    <div
      class="makeStyles-propertySectionLabel-37"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-38 MuiTypography-subtitle2"
      >
        Default Tree
      </h6>
      <div
        class="makeStyles-decorators-39"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
          focusable="false"
          style="margin-left: 8px; font-size: 16px;"
          title=""
          viewBox="0 0 24 24"
        >
          <path
            d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
          />
        </svg>
      </div>
    </div>
    <ul
      aria-multiselectable="false"
      class="MuiTreeView-root"
      role="tree"
    >
      <li
        class="MuiTreeItem-root"
        role="treeitem"
        tabindex="-1"
      >
        <div
          class="MuiTreeItem-content"
        >
          <div
            class="MuiTreeItem-iconContainer"
          />
          <div
            class="MuiTypography-root MuiTreeItem-label MuiTypography-body1"
          >
            <div
              class="makeStyles-label-40"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Node-root1
              </p>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
